fix(security): harden path traversal and write authorization checks
Enforce write-access controls for scanned destinations, delete actions, and
server-set profile/global paths. Rebind deserialized ProfileNFO paths to the
trusted profile file and only delete companion MAME files that live beside it.
Limit ObjectInputStream creation to SignedObjectStore and add nosniff headers
to server JSON responses. Add regression tests for path escapes and rebinding.